--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="poor_net_connection_msg">Oops, you seem not to have internet connection</string>
     <string name="home_day_welcome">Hello, it\'s [Replace with day]</string>
     <string name="profile_text_welcome">Welcome, John</string>
+    <string name="update_profile_button">Update Profile</string>
+    <string name="delete_my_account_button">Delete my account</string>
+    <string name="no_search_result_text">Here looks emtpy, Search for a classroom <br/> to see when its free.</string>
 </resources>
