--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,21 @@
     <string name="update_profile_button">Update Profile</string>
     <string name="delete_my_account_button">Delete my account</string>
     <string name="no_search_result_text">Here looks emtpy, Search for a classroom <br/> to see when its free.</string>
+    <string-array name="upcoming_time">
+        <item>8am - 9am</item>
+        <item>9am - 10am</item>
+        <item>10:30am - 11:30am</item>
+        <item>11:30am - 12:30pm</item>
+        <item>1pm - 2pm</item>
+        <item>2pm - 3pm</item>
+        <item>3pm - 4pm</item>
+        <item>4pm - 5pm</item>
+    </string-array>
+    <string-array name="classrooms">
+        <item>FF11</item>
+        <item>FF12</item>
+        <item>FF13</item>
+        <item>FF14</item>
+        <item>FF15</item>
+    </string-array>
 </resources>
