--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">OCR</string>
     <string name="auth_button_text">Verify</string>
-    <string name="auth_code_instruction">Enter verification code sent to you...</string>
+    <string name="auth_code_instruction">Enter verification code sent to you…</string>
     <string name="auth_activity_title">Open Classrooms</string>
     <string name="main_app_title">Open Classrooms</string>
     <string name="splash_text">class rescheduling assistant</string>
@@ -15,11 +15,23 @@
     <string name="network_connection_msg">Network connection not available</string>
     <string name="poor_net_connection_msg">Oops, you seem not to have internet connection</string>
     <string name="home_day_welcome">Hello, it\'s [Replace with day]</string>
-    <string name="profile_text_welcome">Welcome, John</string>
+    <string name="profile_text_welcome">Welcome</string>
     <string name="update_profile_button">Update Profile</string>
     <string name="delete_my_account_button">Delete my account</string>
     <string name="no_search_result_text">Here looks emtpy, Search for a classroom <br/> to see when its free.</string>
+    <string name="home_bottom_nav">Home</string>
+    <string name="find_bottom_nav">Find</string>
+    <string name="profile_bottom_nav">Profile</string>
+    <string name="search_frag_header_text">Find a classroom</string>
+    <string name="search_frag_search_box">Enter time or classroom to search</string>
+    <string name="profile_frag_username">Username</string>
+    <string name="profile_frag_name">Name</string>
+    <string name="profile_frag_course_program">Course Program</string>
+    <string name="profile_frag_year">Year</string>
+    <string name="home_frag_upcoming">Upcoming</string>
+    <string name="home_frag_available">Available</string>
     <string-array name="upcoming_time">
+        <item>View All</item>
         <item>8am - 9am</item>
         <item>9am - 10am</item>
         <item>10:30am - 11:30am</item>
