--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">OCR</string>
+    <string name="app_name">open classrooms</string>
     <string name="auth_button_text">Verify</string>
     <string name="auth_code_instruction">Enter verification code sent to you…</string>
     <string name="auth_activity_title">Open Classrooms</string>
